--- a/TODO
+++ b/TODO
@@ -1,3 +1,5 @@
 quotes of extractable, odd information, like "was married at 16" "was close to this war" "had 2 children die in childbirth"
 said "xyz"
 conversion quotes
+
+other pictures related to them, like photos of their hand writing, photos of places they were at, anything interesting, anything that could tie you to them...
