more specs, almost release v 0

--- a/TODO
+++ b/TODO
@@ -1,5 +1,36 @@
+v -1: this but distributable
+
+v. 0:
+  you put in your relationship to John Pack, it maps to that ?
+  
+v 1 
+  real screensaver
+    and get rid of title bar, etc.
+  it can have several people, local mapped to images.
+  get rid of multiple heads...
+  
+inspiring quotes like "don't let these people down!" "they're relying on you!"
+use "real" family search API
+
+just show that aren't done yet, so that it will guilt them into...
 quotes of extractable, odd information, like "was married at 16" "was close to this war" "had 2 children die in childbirth"
 said "xyz"
-conversion quotes
+conversion quotes, any quotes, if possible!
+maybe quotes from people around the time that they lived...
+images can get bigger and smaller...
+other pictures related to them, like photos of their hand writing, 
+pictures of documents related to them...obviously we know about them because of some document...photos of places they were at, anything interesting, anything that could tie you to them...
+places they lived, their tombstone
+have people "just related" to you...
+photos of wars they fought in :P
 
-other pictures related to them, like photos of their hand writing, photos of places they were at, anything interesting, anything that could tie you to them...
+show relationship with them
+  show family tree leading to them.
+  
+vary directions 
+the various times that their temple work was done.
+a quiz
+
+something that takes two images and "guesses" what their children will look like--you can compare yourself to that!
+
+you can add pictures locally of your kids, have those displayed, too :)
