can create distro

--- a/TODO
+++ b/TODO
@@ -12,6 +12,8 @@ v 1
 inspiring quotes like "don't let these people down!" "they're relying on you!"
 use "real" family search API
 
+interesting statistics about you, "x cousins, y cousins second removed, z direct ancestors, spanning x years,
+q countries you're from, spans epsion countries, [bugzilla items]"
 just show that aren't done yet, so that it will guilt them into...
 quotes of extractable, odd information, like "was married at 16" "was close to this war" "had 2 children die in childbirth"
 said "xyz"
