search for landscapes, not parties [wow NY, wow], easier to read angle

--- a/TODO
+++ b/TODO
@@ -1,7 +1,6 @@
 == next ==
-use "real" family search API, with sandbox
-  
 
+  not as much angle...fix the transition problem...
 
 == random ==
 can use their "notes" for url's
@@ -31,7 +30,7 @@ photos of wars they fought in :P
 show relationship with them
   show family tree leading to them.
   
-vary directions 
+vary directions
 the various times that their temple work was done.
 a quiz
 
