--- a/TODO
+++ b/TODO
@@ -1,15 +1,32 @@
 == next ==
 
-  not as much angle...fix the transition problem...
+  fix the transition problem...
 
 == random ==
 can use their "notes" for url's
+fabricated notes "they moved 3 times! They lost a child at 3! They lived during the great depression, etc." 
+notes like "this guy saved a bear" or what not.
+my own web server
+"the declaration of independence signed then" with picture of that [?]
+photos of events during that tiem period.
 
-apply for real API key
+born in 1620? any 1620 picture LOL
+
+"Lived at the same time as Tchaikovsky, Joseph Smith"
+
+"These inventions occurred during their life time"
+"these events occurred during their life time"
+
+famous pictures from the span of their lifetime, like "classic 1900" picture'ish
+
+pictures of temples [?]
+
+also use google image search perhaps?
+
+apply for real production API key
 you put in your relationship to John Pack, it maps to that ?
 real screensaver
     and get rid of title bar, etc.
-it can have several people, local mapped to images.
   
 inspiring quotes like "don't let these people down!" "they're relying on you!"
 
