--- a/TODO
+++ b/TODO
@@ -3,6 +3,8 @@
   fix the transition problem...
 
 == random ==
+cache their tree... :P
+
 can use their "notes" for url's
 fabricated notes "they moved 3 times! They lost a child at 3! They lived during the great depression, etc." 
 notes like "this guy saved a bear" or what not.
