--- a/TODO
+++ b/TODO
@@ -1,14 +1,17 @@
 == next ==
 
-  fix the transition problem...
+  fix the image transition problem...
+
+  can use their "notes" for image url's (dropbox example...)
 
 == random ==
-cache their tree... :P
+cache users' pedigree tree... :P
 
-can use their "notes" for url's
 fabricated notes "they moved 3 times! They lost a child at 3! They lived during the great depression, etc." 
-notes like "this guy saved a bear" or what not.
-my own web server
+the notes themselves like "this guy saved a bear" or what not.
+
+my own hosting image web server, or just tell them how to use facebook...
+
 "the declaration of independence signed then" with picture of that [?]
 photos of events during that tiem period.
 
