add in the new code...

--- a/TODO
+++ b/TODO
@@ -5,12 +5,15 @@
   can use their "notes" for image url's (dropbox example...)
 
 == random ==
+
+can display long stories in story form...
+
 cache users' pedigree tree... :P
 
 fabricated notes "they moved 3 times! They lost a child at 3! They lived during the great depression, etc." 
 the notes themselves like "this guy saved a bear" or what not.
 
-my own hosting image web server, or just tell them how to use facebook...
+my own hosting image web server, or just tell them how to use facebook...or how to use dropbox yeah :P
 
 "the declaration of independence signed then" with picture of that [?]
 photos of events during that tiem period.
