it works with notez urls! sweet

--- a/TODO
+++ b/TODO
@@ -8,6 +8,8 @@
 
 can display long stories in story form...
 
+cache .jpg images locally too [?]
+
 cache users' pedigree tree... :P
 
 fabricated notes "they moved 3 times! They lost a child at 3! They lived during the great depression, etc." 
