more upgrade thoughts

--- a/TODO
+++ b/TODO
@@ -6,6 +6,14 @@
 
 == random ==
 
+make "just the background behind the text transparent" so that it ends up like a montage
+
+the "world map" with pinpoints on it LOL
+  maybe with delayed per generation, or even one pin point goes to two, then another or something like that, or possibly an expanding
+    like it starts with just Utah, then once you leave Utah it expands as far as it needs to.
+    or reverse, with a 1600's ancestors showing where they all moved to.
+    or possibly slow, with music, with the name as the new point appears
+
 can display long stories in story form...
 
 cache .jpg images locally too [?]
