--- a/TODO
+++ b/TODO
@@ -12,6 +12,12 @@
 
 == random ==
 
+maybe a list of photos "can pick through them" or "remember some old ones in a list"
+  possibly tie it in with the map/geographical place somehow [? like flckr browser
+
+make it into an ipad app
+  or something that's like "use this game for a few moinutes" [?]
+
 fix the image transition problem...
 
 create a local image log
