--- a/TODO
+++ b/TODO
@@ -10,6 +10,9 @@
 
   make it distributable installerable?
 
+  always display their relationship
+  update the title with what the picture/person is, too
+  
 == random ==
 
 maybe a list of photos "can pick through them" or "remember some old ones in a list"
