notes on top, limit how many to download to make it load faster

--- a/TODO
+++ b/TODO
@@ -15,6 +15,11 @@
   
 == random ==
 
+don't download their whole tree, only the first x...or save it locally [?]
+ or give it to them while you download too? yeah...
+
+cache username/password locally with AES
+
 maybe a list of photos "can pick through them" or "remember some old ones in a list"
   possibly tie it in with the map/geographical place somehow [? like flckr browser
 
