allow more people, for the demo

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 0.4.1 ==
 
-"just in time" ancestor use...
+download ancestors in the background, to get images more quickly.
 
 0.4.0 == 12-12-11
 
