--- a/TODO
+++ b/TODO
@@ -8,6 +8,8 @@
   
 == random ==
 
+move login code to screen_saver
+
 update the title with what the picture/person is, too
 cache users' pedigree tree... :P
     so they don't have to login every time...
