--- a/TODO
+++ b/TODO
@@ -6,6 +6,8 @@
 
   always display their relationship
   
+  it switches people/stats before it switches pictures
+  
 == random ==
 
 move login code to screen_saver
