--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
-0.4.1 ==
+0.5.0 ==
 
-download ancestors in the background, to get images more quickly.
+download ancestors in the background, to get images to your screen more quickly.
 
 0.4.0 == 12-12-11
 
