--- a/TODO
+++ b/TODO
@@ -10,6 +10,10 @@
   
 == random ==
 
+can click somewhere to "show this full picture"
+
+can download from my preservation archiver images LOL
+
 move login code to screen_saver
 
 update the title with what the picture/person is, too
@@ -22,7 +26,7 @@ don't download their whole tree, only the first x...or save it locally [?]
 cache username/password locally with AES
 
 maybe a list of photos "can pick through them" or "remember some old ones in a list"
-  possibly tie it in with the map/geographical place somehow [? like flckr browser
+  possibly tie it in with the map/geographical place somehow [? like flickr browser
 
 make it into an ipad app
   or something that's like "use this game for a few moinutes" [?]
