--- a/TODO
+++ b/TODO
@@ -1,8 +1,6 @@
 == next ==
 
-  it switches people/stats before it switches pictures
-
-  always display the relationship
+  always display their relationship to you
   
   move text to the bottom, those pictures look pretty!
 
