rotate less, pretty, good

--- a/TODO
+++ b/TODO
@@ -9,6 +9,8 @@
   
 == random ==
 
+can "exclude" images like "once upon a time in the west"
+
 make it distributable installerable?
 
 can click somewhere to "show this full picture"
