--- a/TODO
+++ b/TODO
@@ -6,7 +6,11 @@
   apply for real production API key
   
 == random ==
-  always display their relationship to you
+can "pause"
+can "go back" or magnify etc.
+full size images?
+
+always display their relationship to you
 move text to the bottom, those pictures look pretty!
 
 can "exclude" images like "once upon a time in the west"
