--- a/TODO
+++ b/TODO
@@ -1,5 +1,10 @@
 == next ==
 
+convert into an angular/golang web app, please!
+familysearch API
+
+== old ignore these ==
+
 back and forth arrow
 bigger
 display gedcom images  
