--- a/TODO
+++ b/TODO
@@ -1,15 +1,14 @@
 == next ==
 
 convert into an angular/golang web app, please!
-familysearch API
+familysearch API work
 
 == old ignore these ==
 
 back and forth arrow
 bigger
-display gedcom images  
+display gedcom images/familysearch images  
 
-== blocked ==
   apply for real production API key
   
 == random ==
